--- a/src/404.html
+++ b/src/404.html
@@ -184,6 +184,9 @@
                       <a href="./faq.html">よくある質問</a>
                     </div>
                     <div class="nav-contents__title">
+                      <a href="./site-map.html">サイトマップ</a>
+                    </div>
+                    <div class="nav-contents__title">
                       <a href="./privacy-policy.html"
                         >プライバシー<br class="u-mobile" />ポリシー</a
                       >
@@ -203,24 +206,24 @@
       </header>
 
       <main>
+        <div class="breadcrumb breadcrumb--white">
+          <div class="breadcrumb__inner inner">
+            <!-- Breadcrumb NavXTで出力される部分 ここから -->
+            <span>
+              <a href="./index.html">
+                <span>TOP</span>
+              </a>
+            </span>
+            &nbsp;&gt;&nbsp;
+            <span>
+              <span class="breadcrumb__current-item">404</span>
+            </span>
+            <!-- Breadcrumb NavXTで出力される部分 ここまで -->
+          </div>
+        </div>
+
         <div class="error layout-error">
           <div class="error__inner inner">
-            <div class="error__breadcrumb breadcrumb breadcrumb--white">
-              <div class="breadcrumb__inner">
-                <!-- Breadcrumb NavXTで出力される部分 ここから -->
-                <span>
-                  <a href="./index.html">
-                    <span>TOP</span>
-                  </a>
-                </span>
-                &nbsp;&gt;&nbsp;
-                <span>
-                  <span class="breadcrumb__current-item">404</span>
-                </span>
-                <!-- Breadcrumb NavXTで出力される部分 ここまで -->
-              </div>
-            </div>
-
             <div class="error__content">
               <h1 class="error__title">404</h1>
               <div class="error__text-wrap">
@@ -336,6 +339,9 @@
                 <li class="nav-contents__group">
                   <div class="nav-contents__title">
                     <a href="./faq.html">よくある質問</a>
+                  </div>
+                  <div class="nav-contents__title">
+                    <a href="./site-map.html">サイトマップ</a>
                   </div>
                   <div class="nav-contents__title">
                     <a href="./privacy-policy.html"
