--- a/src/about-us.html
+++ b/src/about-us.html
@@ -178,6 +178,9 @@
                     <a href="./faq.html">よくある質問</a>
                   </div>
                   <div class="nav-contents__title">
+                    <a href="./site-map.html">サイトマップ</a>
+                  </div>
+                  <div class="nav-contents__title">
                     <a href="./privacy-policy.html"
                       >プライバシー<br class="u-mobile" />ポリシー</a
                     >
@@ -216,23 +219,22 @@
       </section>
 
       <section class="sub-about-us layout-sub-about-us decoration">
-        <div class="sub-about-us__inner inner">
-          <div class="sub-about-us__breadcrumb breadcrumb">
-            <div class="breadcrumb__inner">
-              <!-- Breadcrumb NavXTで出力される部分 ここから -->
-              <span>
-                <a href="./index.html">
-                  <span>TOP</span>
-                </a>
-              </span>
-              &nbsp;&gt;&nbsp;
-              <span>
-                <span class="breadcrumb__current-item">私たちについて</span>
-              </span>
-              <!-- Breadcrumb NavXTで出力される部分 ここまで -->
-            </div>
+        <div class="sub-about-us__breadcrumb breadcrumb">
+          <div class="breadcrumb__inner inner">
+            <!-- Breadcrumb NavXTで出力される部分 ここから -->
+            <span>
+              <a href="./index.html">
+                <span>TOP</span>
+              </a>
+            </span>
+            &nbsp;&gt;&nbsp;
+            <span>
+              <span class="breadcrumb__current-item">私たちについて</span>
+            </span>
+            <!-- Breadcrumb NavXTで出力される部分 ここまで -->
           </div>
-
+        </div>
+        <div class="sub-about-us__inner inner">
           <div class="sub-about-us__wrapper">
             <div class="about-us__img-wrap about-us">
               <div class="about-us__img-left about-us__img-left--noShow">
@@ -489,6 +491,9 @@
               <li class="nav-contents__group">
                 <div class="nav-contents__title">
                   <a href="./faq.html">よくある質問</a>
+                </div>
+                <div class="nav-contents__title">
+                  <a href="./site-map.html">サイトマップ</a>
                 </div>
                 <div class="nav-contents__title">
                   <a href="./privacy-policy.html"
