--- a/src/blog.html
+++ b/src/blog.html
@@ -178,6 +178,9 @@
                     <a href="./faq.html">よくある質問</a>
                   </div>
                   <div class="nav-contents__title">
+                    <a href="./site-map.html">サイトマップ</a>
+                  </div>
+                  <div class="nav-contents__title">
                     <a href="./privacy-policy.html"
                       >プライバシー<br class="u-mobile" />ポリシー</a
                     >
@@ -211,7 +214,7 @@
           </picture>
         </div>
         <div class="sub-mv__title-wrap sub-page-title">
-          <h1 class="sub-page-title__main">Blog</h1>
+          <div class="sub-page-title__main">Blog</div>
         </div>
       </section>
 
@@ -483,7 +486,7 @@
               <div class="sub-blog__aside-inner">
                 <div class="sub-blog__popular">
                   <div class="sub-blog__head head">
-                    <span>人気記事</span>
+                    <h2 class="sub-blog__head-title">人気記事</h2>
                   </div>
                   <ul class="sub-blog__popular-cards popular-cards">
                     <li class="popular-cards__item">
@@ -563,7 +566,7 @@
 
                 <div class="sub-blog__review">
                   <div class="sub-blog__head">
-                    <span>口コミ</span>
+                    <h2 class="sub-blog__head-title">口コミ</h2>
                   </div>
                   <div class="sub-blog__review-card">
                     <a href="#" class="review-card">
@@ -591,7 +594,7 @@
 
                 <div class="sub-blog__campaign">
                   <div class="sub-blog__head">
-                    <span>キャンペーン</span>
+                    <h2 class="sub-blog__head-title">キャンペーン</h2>
                   </div>
                   <ul class="sub-blog__campaign-cards">
                     <li class="sub-blog__campaign-card">
@@ -673,7 +676,7 @@
                         </div>
                       </a>
                     </li>
-                    <div class="review-card__button">
+                    <div class="sub-blog__button">
                       <a href="./campaign.html" class="button">
                         <span>View more</span>
                       </a>
@@ -683,20 +686,28 @@
 
                 <div class="sub-blog__archive">
                   <div class="sub-blog__head">
-                    <span>アーカイブ</span>
+                    <h2 class="sub-blog__head-title">アーカイブ</h2>
                   </div>
 
-                  <details class="sub-blog__archive-details">
-                    <summary class="sub-blog__archive-summary">2023</summary>
+                  <div class="sub-blog__archive-details">
+                    <p class="sub-blog__archive-summary js-drawer-accordion">
+                      2023
+                    </p>
                     <ul class="sub-blog__archive-lists">
-                      <li class="sub-blog__archive-item">3月</li>
-                      <li class="sub-blog__archive-item">2月</li>
-                      <li class="sub-blog__archive-item">1月</li>
+                      <li class="sub-blog__archive-item">
+                        <a href="#">3月</a>
+                      </li>
+                      <li class="sub-blog__archive-item">
+                        <a href="#">2月</a>
+                      </li>
+                      <li class="sub-blog__archive-item">
+                        <a href="#">1月</a>
+                      </li>
                     </ul>
-                  </details>
-                  <details class="sub-blog__archive-details">
-                    <summary class="sub-blog__archive-summary">2022</summary>
-                  </details>
+                  </div>
+                  <div class="sub-blog__archive-details">
+                    <p class="sub-blog__archive-summary">2022</p>
+                  </div>
                 </div>
               </div>
             </aside>
@@ -856,6 +867,9 @@
               <li class="nav-contents__group">
                 <div class="nav-contents__title">
                   <a href="./faq.html">よくある質問</a>
+                </div>
+                <div class="nav-contents__title">
+                  <a href="./site-map.html">サイトマップ</a>
                 </div>
                 <div class="nav-contents__title">
                   <a href="./privacy-policy.html"
