--- a/src/campaign.html
+++ b/src/campaign.html
@@ -178,6 +178,9 @@
                     <a href="./faq.html">よくある質問</a>
                   </div>
                   <div class="nav-contents__title">
+                    <a href="./site-map.html">サイトマップ</a>
+                  </div>
+                  <div class="nav-contents__title">
                     <a href="./privacy-policy.html"
                       >プライバシー<br class="u-mobile" />ポリシー</a
                     >
@@ -216,23 +219,22 @@
       </section>
 
       <div class="sub-campaign layout-sub-campaign decoration">
-        <div class="sub-campaign__inner inner">
-          <div class="sub-campaign__breadcrumb breadcrumb">
-            <div class="breadcrumb__inner">
-              <!-- Breadcrumb NavXTで出力される部分 ここから -->
-              <span>
-                <a href="./index.html">
-                  <span>TOP</span>
-                </a>
-              </span>
-              &nbsp;&gt;&nbsp;
-              <span>
-                <span class="breadcrumb__current-item">キャンペーン</span>
-              </span>
-              <!-- Breadcrumb NavXTで出力される部分 ここまで -->
-            </div>
+        <div class="sub-campaign__breadcrumb breadcrumb">
+          <div class="breadcrumb__inner inner">
+            <!-- Breadcrumb NavXTで出力される部分 ここから -->
+            <span>
+              <a href="./index.html">
+                <span>TOP</span>
+              </a>
+            </span>
+            &nbsp;&gt;&nbsp;
+            <span>
+              <span class="breadcrumb__current-item">キャンペーン</span>
+            </span>
+            <!-- Breadcrumb NavXTで出力される部分 ここまで -->
           </div>
-
+        </div>
+        <div class="sub-campaign__inner inner">
           <div class="sub-campaign__tab tab">
             <ul class="tab__menu">
               <li class="tab__menu-item">ALL</li>
@@ -496,8 +498,8 @@
                 <h2 class="section-header__sub section-header__sub--contact">
                   お問い合わせ
                 </h2>
-                <p class="contact__button-text">ご予約・お問い合わせはコチラ</p>
               </div>
+              <p class="contact__button-text">ご予約・お問い合わせはコチラ</p>
               <div class="contact__button">
                 <a href="#" class="button">
                   <span>Contact us</span>
@@ -605,6 +607,9 @@
               <li class="nav-contents__group">
                 <div class="nav-contents__title">
                   <a href="./faq.html">よくある質問</a>
+                </div>
+                <div class="nav-contents__title">
+                  <a href="./site-map.html">サイトマップ</a>
                 </div>
                 <div class="nav-contents__title">
                   <a href="./privacy-policy.html"
