--- a/src/contact.html
+++ b/src/contact.html
@@ -178,6 +178,9 @@
                     <a href="./faq.html">よくある質問</a>
                   </div>
                   <div class="nav-contents__title">
+                    <a href="./site-map.html">サイトマップ</a>
+                  </div>
+                  <div class="nav-contents__title">
                     <a href="./privacy-policy.html"
                       >プライバシー<br class="u-mobile" />ポリシー</a
                     >
@@ -215,24 +218,23 @@
         </div>
       </section>
 
-      <div class="sub-contact layout-sub-contact decoration">
+      <div class="breadcrumb layout-breadcrumb decoration">
+        <div class="breadcrumb__inner inner">
+          <!-- Breadcrumb NavXTで出力される部分 ここから -->
+          <span>
+            <a href="./index.html">
+              <span>TOP</span>
+            </a>
+          </span>
+          &nbsp;&gt;&nbsp;
+          <span>
+            <span class="breadcrumb__current-item">お問い合わせ</span>
+          </span>
+          <!-- Breadcrumb NavXTで出力される部分 ここまで -->
+        </div>
+      </div>
+      <div class="sub-contact layout-sub-contact">
         <div class="sub-contact__inner inner">
-          <div class="sub-contact__breadcrumb breadcrumb">
-            <div class="breadcrumb__inner">
-              <!-- Breadcrumb NavXTで出力される部分 ここから -->
-              <span>
-                <a href="./index.html">
-                  <span>TOP</span>
-                </a>
-              </span>
-              &nbsp;&gt;&nbsp;
-              <span>
-                <span class="breadcrumb__current-item">お問い合わせ</span>
-              </span>
-              <!-- Breadcrumb NavXTで出力される部分 ここまで -->
-            </div>
-          </div>
-
           <div class="sub-contact__form">
             <div class="sub-contact__inner">
               <div class="error-message"></div>
@@ -343,7 +345,7 @@
                   </label>
                 </div>
 
-                <div class="contact__button contact__button--subContact">
+                <div class="contact-form__button">
                   <a href="#" class="button">
                     <span>Send</span>
                   </a>
@@ -451,6 +453,9 @@
               <li class="nav-contents__group">
                 <div class="nav-contents__title">
                   <a href="./faq.html">よくある質問</a>
+                </div>
+                <div class="nav-contents__title">
+                  <a href="./site-map.html">サイトマップ</a>
                 </div>
                 <div class="nav-contents__title">
                   <a href="./privacy-policy.html"
