--- a/src/information.html
+++ b/src/information.html
@@ -132,6 +132,7 @@
                   <div class="nav-contents__title">
                     <a href="./price.html">料金一覧</a>
                   </div>
+
                   <ul class="nav-contents__items">
                     <li class="nav-contents__item">
                       <a href="#">ライセンス講習</a>
@@ -176,6 +177,9 @@
                     <a href="./faq.html">よくある質問</a>
                   </div>
                   <div class="nav-contents__title">
+                    <a href="./site-map.html">サイトマップ</a>
+                  </div>
+                  <div class="nav-contents__title">
                     <a href="./privacy-policy.html"
                       >プライバシー<br class="u-mobile" />ポリシー</a
                     >
@@ -214,36 +218,35 @@
       </section>
 
       <section class="sub-information layout-sub-information decoration">
-        <div class="sub-information__inner inner">
-          <div class="sub-information__breadcrumb breadcrumb">
-            <div class="breadcrumb__inner">
-              <!-- Breadcrumb NavXTで出力される部分 ここから -->
-              <span>
-                <a href="./index.html">
-                  <span>TOP</span>
-                </a>
-              </span>
-              &nbsp;&gt;&nbsp;
-              <span>
-                <span class="breadcrumb__current-item">ダイビング情報</span>
-              </span>
-              <!-- Breadcrumb NavXTで出力される部分 ここまで -->
-            </div>
+        <div class="sub-information__breadcrumb breadcrumb">
+          <div class="breadcrumb__inner inner">
+            <!-- Breadcrumb NavXTで出力される部分 ここから -->
+            <span>
+              <a href="./index.html">
+                <span>TOP</span>
+              </a>
+            </span>
+            &nbsp;&gt;&nbsp;
+            <span>
+              <span class="breadcrumb__current-item">ダイビング情報</span>
+            </span>
+            <!-- Breadcrumb NavXTで出力される部分 ここまで -->
           </div>
-
+        </div>
+        <div class="sub-information__inner inner">
           <div class="sub-information__contents">
             <div class="sub-information__tab tab-info">
               <ul class="tab-info__menu">
                 <li
-                  class="tab-info__menu-item js-tab-info-menu is-tab"
+                  class="tab-info__menu-item js-tab-info-menu"
                   data-number="tab01"
-                  data-image-default="./assets/images/sub/whale-white.png"
-                  data-image-active="./assets/images/sub/whale-green.png"
                 >
                   <div class="tab-info__img u-desktop">
                     <img
-                      src="./assets/images/sub/whale-white.png"
+                      src="./assets/images/sub/whale-green.svg"
                       alt="鯨のアイコン"
+                      data-image-default="./assets/images/sub/whale-green.svg"
+                      data-image-active="./assets/images/sub/whale-white.svg"
                     />
                   </div>
                   <span>ライセンス<br class="u-mobile" />講習</span>
@@ -252,13 +255,13 @@
                 <li
                   class="tab-info__menu-item js-tab-info-menu"
                   data-number="tab02"
-                  data-image-default="./assets/images/sub/whale-white.png"
-                  data-image-active="./assets/images/sub/whale-green.png"
                 >
                   <div class="tab-info__img u-desktop">
                     <img
-                      src="./assets/images/sub/whale-green.png"
-                      alt="鯨のアイコン"
+                      src="./assets/images/sub/shark-white.svg"
+                      alt="鮫のアイコン"
+                      data-image-default="./assets/images/sub/shark-green.svg"
+                      data-image-active="./assets/images/sub/shark-white.svg"
                     />
                   </div>
                   <span>ファン<br class="u-mobile" />ダイビング</span>
@@ -267,13 +270,13 @@
                 <li
                   class="tab-info__menu-item js-tab-info-menu"
                   data-number="tab03"
-                  data-image-default="./assets/images/sub/whale-white.png"
-                  data-image-active="./assets/images/sub/whale-green.png"
                 >
                   <div class="tab-info__img u-desktop">
                     <img
-                      src="./assets/images/sub/whale-green.png"
-                      alt="鯨のアイコン"
+                      src="./assets/images/sub/fish-white.svg"
+                      alt="魚のアイコン"
+                      data-image-default="./assets/images/sub/fish-green.svg"
+                      data-image-active="./assets/images/sub/fish-white.svg"
                     />
                   </div>
                   <span>体験<br class="u-mobile" />ダイビング</span>
@@ -471,6 +474,7 @@
                 <div class="nav-contents__title">
                   <a href="./price.html">料金一覧</a>
                 </div>
+
                 <ul class="nav-contents__items">
                   <li class="nav-contents__item">
                     <a href="#">ライセンス講習</a>
@@ -513,6 +517,9 @@
               <li class="nav-contents__group">
                 <div class="nav-contents__title">
                   <a href="./faq.html">よくある質問</a>
+                </div>
+                <div class="nav-contents__title">
+                  <a href="./site-map.html">サイトマップ</a>
                 </div>
                 <div class="nav-contents__title">
                   <a href="./privacy-policy.html"
