--- a/src/price.html
+++ b/src/price.html
@@ -178,6 +178,9 @@
                     <a href="./faq.html">よくある質問</a>
                   </div>
                   <div class="nav-contents__title">
+                    <a href="./site-map.html">サイトマップ</a>
+                  </div>
+                  <div class="nav-contents__title">
                     <a href="./privacy-policy.html"
                       >プライバシー<br class="u-mobile" />ポリシー</a
                     >
@@ -215,24 +218,23 @@
         </div>
       </section>
 
-      <div class="sub-price layout-sub-price decoration">
+      <div class="breadcrumb layout-breadcrumb decoration">
+        <div class="breadcrumb__inner inner">
+          <!-- Breadcrumb NavXTで出力される部分 ここから -->
+          <span>
+            <a href="./index.html">
+              <span>TOP</span>
+            </a>
+          </span>
+          &nbsp;&gt;&nbsp;
+          <span>
+            <span class="breadcrumb__current-item">料金一覧</span>
+          </span>
+          <!-- Breadcrumb NavXTで出力される部分 ここまで -->
+        </div>
+      </div>
+      <div class="sub-price layout-sub-price">
         <div class="sub-price__inner inner">
-          <div class="sub-price__breadcrumb breadcrumb">
-            <div class="breadcrumb__inner">
-              <!-- Breadcrumb NavXTで出力される部分 ここから -->
-              <span>
-                <a href="./index.html">
-                  <span>TOP</span>
-                </a>
-              </span>
-              &nbsp;&gt;&nbsp;
-              <span>
-                <span class="breadcrumb__current-item">料金一覧</span>
-              </span>
-              <!-- Breadcrumb NavXTで出力される部分 ここまで -->
-            </div>
-          </div>
-
           <div class="sub-price__table price-lists">
             <div class="price-lists__items price-list">
               <p class="price-list__title">
@@ -520,6 +522,9 @@
               <li class="nav-contents__group">
                 <div class="nav-contents__title">
                   <a href="./faq.html">よくある質問</a>
+                </div>
+                <div class="nav-contents__title">
+                  <a href="./site-map.html">サイトマップ</a>
                 </div>
                 <div class="nav-contents__title">
                   <a href="./privacy-policy.html"
