--- a/src/site-map.html
+++ b/src/site-map.html
@@ -178,6 +178,9 @@
                     <a href="./faq.html">よくある質問</a>
                   </div>
                   <div class="nav-contents__title">
+                    <a href="./site-map.html">サイトマップ</a>
+                  </div>
+                  <div class="nav-contents__title">
                     <a href="./privacy-policy.html"
                       >プライバシー<br class="u-mobile" />ポリシー</a
                     >
@@ -215,24 +218,23 @@
         </div>
       </section>
 
-      <div class="sub-site-map layout-sub-thanks decoration">
+      <div class="breadcrumb layout-breadcrumb decoration">
+        <div class="breadcrumb__inner inner">
+          <!-- Breadcrumb NavXTで出力される部分 ここから -->
+          <span>
+            <a href="./index.html">
+              <span>TOP</span>
+            </a>
+          </span>
+          &nbsp;&gt;&nbsp;
+          <span>
+            <span class="breadcrumb__current-item">サイトマップ</span>
+          </span>
+          <!-- Breadcrumb NavXTで出力される部分 ここまで -->
+        </div>
+      </div>
+      <div class="sub-site-map layout-site-map">
         <div class="sub-site-map__inner inner">
-          <div class="sub-site-map__breadcrumb breadcrumb">
-            <div class="breadcrumb__inner">
-              <!-- Breadcrumb NavXTで出力される部分 ここから -->
-              <span>
-                <a href="./index.html">
-                  <span>TOP</span>
-                </a>
-              </span>
-              &nbsp;&gt;&nbsp;
-              <span>
-                <span class="breadcrumb__current-item">サイトマップ</span>
-              </span>
-              <!-- Breadcrumb NavXTで出力される部分 ここまで -->
-            </div>
-          </div>
-
           <div class="sub-site-map__content">
             <div class="sub-site-map__nav nav-contents">
               <nav class="nav-contents__wrap nav-contents__wrap--gap">
@@ -318,6 +320,9 @@
                   <li class="nav-contents__group">
                     <div class="nav-contents__title nav-contents__title--dark">
                       <a href="./faq.html">よくある質問</a>
+                    </div>
+                    <div class="nav-contents__title nav-contents__title--dark">
+                      <a href="./site-map.html">サイトマップ</a>
                     </div>
                     <div class="nav-contents__title nav-contents__title--dark">
                       <a href="./privacy-policy.html"
@@ -490,6 +495,9 @@
               <li class="nav-contents__group">
                 <div class="nav-contents__title">
                   <a href="./faq.html">よくある質問</a>
+                </div>
+                <div class="nav-contents__title">
+                  <a href="./site-map.html">サイトマップ</a>
                 </div>
                 <div class="nav-contents__title">
                   <a href="./privacy-policy.html"
