--- a/src/faq.html
+++ b/src/faq.html
@@ -178,6 +178,9 @@
                     <a href="#">よくある質問</a>
                   </div>
                   <div class="nav-contents__title">
+                    <a href="./site-map.html">サイトマップ</a>
+                  </div>
+                  <div class="nav-contents__title">
                     <a href="./privacy-policy.html"
                       >プライバシー<br class="u-mobile" />ポリシー</a
                     >
@@ -215,71 +218,58 @@
         </div>
       </section>
 
-      <div class="sub-faq layout-sub-faq decoration">
+      <div class="breadcrumb layout-breadcrumb decoration">
+        <div class="breadcrumb__inner inner">
+          <!-- Breadcrumb NavXTで出力される部分 ここから -->
+          <span>
+            <a href="./index.html">
+              <span>TOP</span>
+            </a>
+          </span>
+          &nbsp;&gt;&nbsp;
+          <span>
+            <span class="breadcrumb__current-item">よくある質問</span>
+          </span>
+          <!-- Breadcrumb NavXTで出力される部分 ここまで -->
+        </div>
+      </div>
+      <div class="sub-faq layout-sub-faq">
         <div class="sub-faq__inner inner">
-          <div class="sub-faq__breadcrumb breadcrumb">
-            <div class="breadcrumb__inner">
-              <!-- Breadcrumb NavXTで出力される部分 ここから -->
-              <span>
-                <a href="./index.html">
-                  <span>TOP</span>
-                </a>
-              </span>
-              &nbsp;&gt;&nbsp;
-              <span>
-                <span class="breadcrumb__current-item">よくある質問</span>
-              </span>
-              <!-- Breadcrumb NavXTで出力される部分 ここまで -->
-            </div>
-          </div>
-
           <div class="sub-faq__content faq">
             <div class="faq__inner">
               <ul class="faq__list faq-list">
                 <li class="faq-list__item">
-                  <p class="faq-list__item-question js-faq-question">
-                    ここに質問が入ります。
-                  </p>
+                  <p class="faq-list__item-question">ここに質問が入ります。</p>
                   <p class="faq-list__item-answer">
                     ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
                   </p>
                 </li>
                 <li class="faq-list__item">
-                  <p class="faq-list__item-question js-faq-question">
-                    ここに質問が入ります。
-                  </p>
+                  <p class="faq-list__item-question">ここに質問が入ります。</p>
                   <p class="faq-list__item-answer">
                     ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
                   </p>
                 </li>
                 <li class="faq-list__item">
-                  <p class="faq-list__item-question js-faq-question">
-                    ここに質問が入ります。
-                  </p>
+                  <p class="faq-list__item-question">ここに質問が入ります。</p>
                   <p class="faq-list__item-answer">
                     ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
                   </p>
                 </li>
                 <li class="faq-list__item">
-                  <p class="faq-list__item-question js-faq-question">
-                    ここに質問が入ります。
-                  </p>
+                  <p class="faq-list__item-question">ここに質問が入ります。</p>
                   <p class="faq-list__item-answer">
                     ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
                   </p>
                 </li>
                 <li class="faq-list__item">
-                  <p class="faq-list__item-question js-faq-question">
-                    ここに質問が入ります。
-                  </p>
+                  <p class="faq-list__item-question">ここに質問が入ります。</p>
                   <p class="faq-list__item-answer">
                     ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
                   </p>
                 </li>
                 <li class="faq-list__item">
-                  <p class="faq-list__item-question js-faq-question">
-                    ここに質問が入ります。
-                  </p>
+                  <p class="faq-list__item-question">ここに質問が入ります。</p>
                   <p class="faq-list__item-answer">
                     ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
                   </p>
@@ -450,6 +440,9 @@
               <li class="nav-contents__group">
                 <div class="nav-contents__title">
                   <a href="#">よくある質問</a>
+                </div>
+                <div class="nav-contents__title">
+                  <a href="./site-map.html">サイトマップ</a>
                 </div>
                 <div class="nav-contents__title">
                   <a href="./privacy-policy.html"
