--- a/src/index.html
+++ b/src/index.html
@@ -206,6 +206,9 @@
                     <a href="./faq.html">よくある質問</a>
                   </div>
                   <div class="nav-contents__title">
+                    <a href="./site-map.html">サイトマップ</a>
+                  </div>
+                  <div class="nav-contents__title">
                     <a href="./privacy-policy.html"
                       >プライバシー<br class="u-mobile" />ポリシー</a
                     >
@@ -936,6 +939,9 @@
               <li class="nav-contents__group">
                 <div class="nav-contents__title">
                   <a href="./faq.html">よくある質問</a>
+                </div>
+                <div class="nav-contents__title">
+                  <a href="./site-map.html">サイトマップ</a>
                 </div>
                 <div class="nav-contents__title">
                   <a href="./privacy-policy.html"
